fix(home) : 아이템 선택에 따른 인텐트 실행준비

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:name=".MyApplication"
+        android:screenOrientation="portrait"
         android:theme="@style/Theme.CleanArchitectureTest">
 
-        <activity android:name=".presenter.view.splash.SplashActivity"
-            android:screenOrientation="portrait"
-            android:exported="true">
-        </activity>
+        <activity android:name=".presenter.view.splash.SplashActivity" />
 
         <activity android:name=".presenter.view.main.MainActivity"
             android:exported="true">
