fix(imageSelect) : 엑티비티 추가 및 연결

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
 
         <activity android:name=".presenter.view.splash.SplashActivity" />
 
+        <activity android:name=".presenter.view.imageselect.ImageSelectActivity" />
+
         <activity android:name=".presenter.view.main.MainActivity"
             android:exported="true">
             <intent-filter>
