feat(imageDetail) : 엑티비티 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".presenter.view.splash.SplashActivity" />
 
         <activity android:name=".presenter.view.imageselect.ImageSelectActivity" />
+        <activity android:name=".presenter.view.imageselect.ImageDetailActivity" />
 
         <activity android:name=".presenter.view.main.MainActivity"
             android:exported="true">
